[package]
name = "dexopt_analyzer"
version = "0.2.0"
edition = "2024"
authors = ["sms1sis sadimsajid2004@gmail.com"]
license = "MIT"
description = "A tool to analyze dexopt on android"
repository = "https://github.com/sms1sis/dexopt_analyzer"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
apk-info = "1.0.9"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
thiserror = "2.0.17"
